<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/photo_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/profile_photo"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondaryDarkColor"
        app:layout_constraintTop_toBottomOf="@id/photo_txt"
        android:layout_marginTop="10dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/take_photos"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/select_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/select_from_photos"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />


</LinearLayout>