<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/view_acctParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:scrollbars="vertical"
        android:clipToPadding="false"
        android:scrollbarStyle="insideOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.account.ViewProfileFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview1"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintHorizontal_bias="0.303"
                app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                app:layout_constraintTop_toTopOf="@+id/guideline3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/profile_picture"
                        android:layout_width="100dp"
                        android:layout_height="122dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/profile_picture"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/avatars" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/edit_btn"
                        style="@style/Widget.MaterialComponents.Button"
                        android:backgroundTint="@color/colorAccent"
                        android:layout_width="56dp"
                        android:layout_height="63dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/edit"
                        android:textAllCaps="false"
                        app:cornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/lname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="center_horizontal"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="Last Name" />


                    <TextView
                        android:id="@+id/fname"
                        android:layout_width="101dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/lname"
                        app:layout_constraintTop_toTopOf="@+id/lname"
                        tools:text="First Name" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@+id/cardview1"
                android:layout_marginTop="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:text="@string/personal_details"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/date_of_birth"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="20/2/2007" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/gender"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/gender_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="Male" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp">

                    <TextView
                        android:id="@+id/contact_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_detail"
                        android:background="@color/colorAccent"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/mobile"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/mobile_number"
                        app:layout_constraintEnd_toEndOf="@+id/contact_txt"
                        app:layout_constraintStart_toStartOf="@+id/contact_txt"
                        app:layout_constraintTop_toBottomOf="@+id/contact_txt" />

                    <TextView
                        android:id="@+id/email"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/email_address"
                        app:layout_constraintEnd_toEndOf="@+id/mobile"
                        app:layout_constraintStart_toStartOf="@+id/mobile"
                        app:layout_constraintTop_toBottomOf="@+id/mobile" />

                    <TextView
                        android:id="@+id/address"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/address"
                        app:layout_constraintEnd_toEndOf="@+id/email"
                        app:layout_constraintHorizontal_bias="0.541"
                        app:layout_constraintStart_toStartOf="@+id/email"
                        app:layout_constraintTop_toBottomOf="@+id/email" />

                    <TextView
                        android:id="@+id/mobile_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/mobile"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        tools:text="0606304040" />

                    <TextView
                        android:id="@+id/email_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintBaseline_toBaselineOf="@+id/email"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="spring@gmail.com" />

                    <TextView
                        android:id="@+id/address_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintBaseline_toBaselineOf="@+id/address"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="N02 0nyeka Street" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <TextView
                        android:id="@+id/skills"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Skills Detail"
                        android:background="@color/colorAccent"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/recent_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:text="Recent Work"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/album_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="10dp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toTopOf="@id/addImage"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/recent_work" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addImage"
                        style="@style/TextAppearance.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/add_image_to_album"
                        android:textAllCaps="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/album_recycler" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>